[gd_scene load_steps=7 format=3 uid="uid://d17l87lx172u4"]

[ext_resource type="Script" path="res://scripts/shopkeeper.gd" id="1_fxx1t"]
[ext_resource type="Texture2D" uid="uid://cg6lsmu2f0us1" path="res://icon.svg" id="2_q1mbh"]
[ext_resource type="Script" path="res://shopkeeper_text.gd" id="3_osww4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rmacj"]
radius = 53.0377

[sub_resource type="SpriteFrames" id="SpriteFrames_jkxup"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_q1mbh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1q6y8"]
radius = 8.0

[node name="shopkeeper" type="CharacterBody2D"]
script = ExtResource("1_fxx1t")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_rmacj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2.38419e-07, 1)
scale = Vector2(0.238281, 0.105469)
sprite_frames = SubResource("SpriteFrames_jkxup")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1q6y8")

[node name="shopkeeper_text" type="CanvasLayer" parent="."]
script = ExtResource("3_osww4")

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_top = -35.0
offset_right = 20.0
offset_bottom = -12.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
